--- a/src/app/pages/add/add.page.html
+++ b/src/app/pages/add/add.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button icon="../../../assets/images/back.svg"></ion-back-button>
     </ion-buttons>
-    <ion-title>اضافة اعلان</ion-title>
+    <ion-title>{{editedBuild?'تعديل':"اضافة"}} اعلان</ion-title>
     <p slot="end" dir="ltr">
       {{step +" /"+'3' }}
     </p>
@@ -18,9 +18,15 @@
     <ng-template swiperSlide>
       <img (click)="selectImage()" src="../../../assets/images/add-img.svg" alt="">
     </ng-template>
-    <ng-template *ngFor="let img of images;let i =index" swiperSlide>
-      <img class="deleteBtn" src="../../../assets/images/delete_button.svg" alt="" (click)="deleteImage(img,i)">
+    <ng-template *ngFor="let img of imagesFromDevice;let i =index" swiperSlide>
+      <img class="deleteBtn" src="../../../assets/images/delete_button.svg" alt=""
+        (click)="deleteImage(img,i,'device')">
       <img class="myImg" [src]="img.data" alt="">
+    </ng-template>
+    <ng-template *ngFor="let img of imagesToSubmit;let i =index" swiperSlide>
+      <img class="deleteBtn" src="../../../assets/images/delete_button.svg" alt=""
+        (click)="deleteImage(img,i,'submit')">
+      <img class="myImg" [src]="img" alt="">
     </ng-template>
   </swiper>
   <div class="container">
@@ -40,6 +46,15 @@
       <div *ngIf="step==1" class="step_1">
 
         <div class="animate__animated animate__fadeInBottomLeft duration">
+          <p>نوع الاعلان</p>
+          <div class="item_box">
+            <ion-select [compareWith]="adGender" mode="ios" placeholder="الشقق" formControlName="adGender">
+              <ion-select-option *ngFor="let type of adGender" [value]="type._id">{{type.name}}</ion-select-option>
+            </ion-select>
+          </div>
+        </div>
+
+        <div class="animate__animated animate__fadeInBottomLeft duration">
           <p>اسم / عنوان الرئيسي</p>
           <div class="item_box">
             <ion-input formControlName="title" placeholder="ادخل العنوان">
@@ -50,7 +65,7 @@
         <div class="animate__animated animate__fadeInBottomLeft duration">
           <p>المحافظة</p>
           <div class="item_box">
-            <ion-select mode="ios" placeholder="الشقق" formControlName="city">
+            <ion-select [compareWith]="citys" mode="ios" placeholder="الشقق" formControlName="city">
               <ion-select-option *ngFor="let city of citys" [value]="city._id">{{city.name}}</ion-select-option>
             </ion-select>
           </div>
@@ -59,7 +74,7 @@
         <div class="animate__animated animate__fadeInBottomLeft duration">
           <p>نوع العقار</p>
           <div class="item_box">
-            <ion-select mode="ios" placeholder="الشقق" formControlName="buildType">
+            <ion-select [compareWith]="buildTypes" mode="ios" placeholder="الشقق" formControlName="buildType">
               <ion-select-option *ngFor="let type of buildTypes" [value]="type._id">{{type.name}}</ion-select-option>
             </ion-select>
           </div>
@@ -87,51 +102,76 @@
       <div *ngIf="step==2" class="step_2">
         <h1>المواصفات</h1>
 
-        <div class="animate__animated animate__fadeInBottomLeft duration">
-          <p>المساحة</p>
-          <div class="item_box">
-            <ion-input formControlName="area" placeholder="ادخل المساحة">
-            </ion-input>
+        <div class="items_multiBox">
+          <div class="animate__animated animate__fadeInBottomLeft duration">
+            <p>المساحة</p>
+            <div class="item_box">
+              <ion-input type="number" formControlName="area" placeholder="المساحة">
+              </ion-input>
+            </div>
+          </div>
+          <div class="animate__animated animate__fadeInBottomLeft duration">
+            <p>الواجهه</p>
+            <div class="item_box">
+              <ion-input type="number" formControlName="interface" placeholder="الواجهه">
+              </ion-input>
+            </div>
+          </div>
+          <div class="animate__animated animate__fadeInBottomLeft duration">
+            <p>النزال</p>
+            <div class="item_box">
+              <ion-input type="number" formControlName="depth" placeholder="النزال">
+              </ion-input>
+            </div>
           </div>
         </div>
+        <div class="items_multiBox">
+          <div class="animate__animated animate__fadeInBottomLeft duration">
+            <p>عدد الغرف</p>
+            <div class="item_box">
+              <ion-input type="number" formControlName="roomsNumber" placeholder="ادخل العدد">
+              </ion-input>
+            </div>
+          </div>
 
-        <div class="animate__animated animate__fadeInBottomLeft duration">
-          <p>عدد الغرف</p>
-          <div class="item_box">
-            <ion-input type="number" formControlName="roomsNumber" placeholder="ادخل العدد">
-            </ion-input>
+          <div class="animate__animated animate__fadeInBottomLeft duration">
+            <p>عدد الحمامات</p>
+            <div class="item_box">
+              <ion-input type="number" formControlName="bathroomNumber" placeholder="ادخل العدد">
+              </ion-input>
+            </div>
+          </div>
+          <div class="animate__animated animate__fadeInBottomLeft duration">
+            <p>سنة البناء</p>
+            <div class="item_box">
+              <ion-input type="number" formControlName="buildYear" placeholder="ادخل السنة">
+              </ion-input>
+            </div>
+          </div>
+
+        </div>
+        <div class="items_multiBox">
+          <div style="flex-basis: 100%;" class="animate__animated animate__fadeInBottomLeft duration">
+            <p>العنوان</p>
+            <div class="item_box">
+              <ion-input formControlName="address" placeholder="ادخل العنوان">
+              </ion-input>
+            </div>
+          </div>
+
+          <div class="animate__animated animate__fadeInBottomLeft duration">
+            <p>عدد الطوابق</p>
+            <div class="item_box">
+              <ion-input type="number" formControlName="floorsNumber" placeholder="عدد الطوابق">
+              </ion-input>
+            </div>
           </div>
         </div>
-
-        <div class="animate__animated animate__fadeInBottomLeft duration">
-          <p>عدد الحمامات</p>
-          <div class="item_box">
-            <ion-input type="number" formControlName="bathroomNumber" placeholder="ادخل العدد">
-            </ion-input>
-          </div>
-        </div>
-
-        <div class="animate__animated animate__fadeInBottomLeft duration">
-          <p>سنة البناء</p>
-          <div class="item_box">
-            <ion-input type="number" formControlName="buildYear" placeholder="ادخل السنة">
-            </ion-input>
-          </div>
-        </div>
-
-        <div class="animate__animated animate__fadeInBottomLeft duration">
-          <p>العنوان</p>
-          <div class="item_box">
-            <ion-input formControlName="address" placeholder="ادخل العنوان">
-            </ion-input>
-          </div>
-        </div>
-
         <div class="animate__animated animate__fadeInBottomLeft duration">
           <p>الوصف</p>
-          <div class="item_box">
-            <ion-input type="text" formControlName="description" placeholder="ادخل العدد">
-            </ion-input>
+          <div style="height: auto;" class="item_box">
+            <ion-textarea rows="5" autoGrow="true" type="text" formControlName="description" placeholder="ادخل العدد">
+            </ion-textarea>
           </div>
         </div>
 
@@ -141,40 +181,33 @@
         <h1>المواصفات</h1>
 
         <div class="animate__animated animate__fadeInBottomLeft duration">
-          <p>جنس السند</p>
+          <p>نوع ملكيه السند</p>
           <div class="item_box">
-            <ion-select mode="ios" placeholder="الشقق" formControlName="bondType">
+            <ion-select [compareWith]="bondTypes" mode="ios" placeholder="الشقق" formControlName="bondType">
               <ion-select-option *ngFor="let type of bondTypes" [value]="type._id">{{type.name}}</ion-select-option>
             </ion-select>
           </div>
         </div>
 
-        <div class="animate__animated animate__fadeInBottomLeft duration">
-          <p>جنس الاعلان</p>
-          <div class="item_box">
-            <ion-select mode="ios" placeholder="الشقق" formControlName="adGender">
-              <ion-select-option *ngFor="let type of adGender" [value]="type._id">{{type.name}}</ion-select-option>
-            </ion-select>
-          </div>
-        </div>
 
-        <div class="animate__animated animate__fadeInBottomLeft duration">
-          <p>نوع الاعلان</p>
+
+        <!-- <div class="animate__animated animate__fadeInBottomLeft duration">
+          <p>فئة الاعلان</p>
           <div class="item_box">
-            <ion-select mode="ios" placeholder="الشقق" formControlName="adType">
+            <ion-select [compareWith]="adTypes" mode="ios" placeholder="الشقق" formControlName="adType">
               <ion-select-option *ngFor="let type of adTypes" [value]="type._id">{{type.name}}</ion-select-option>
             </ion-select>
           </div>
-        </div>
+        </div> -->
 
-        <div class="animate__animated animate__fadeInBottomLeft duration">
+        <!-- <div class="animate__animated animate__fadeInBottomLeft duration">
           <p>حالة العرض</p>
           <div class="item_box">
-            <ion-select mode="ios" placeholder="الشقق" formControlName="adStatus">
+            <ion-select [compareWith]="adStatus" mode="ios" placeholder="الشقق" formControlName="adStatus">
               <ion-select-option *ngFor="let type of adStatus" [value]="type._id">{{type.name}}</ion-select-option>
             </ion-select>
           </div>
-        </div>
+        </div> -->
 
         <div class="animate__animated animate__fadeInBottomLeft duration">
           <p>رقم الهاتف</p>
