--- a/src/app/pages/menu/menu.page.html
+++ b/src/app/pages/menu/menu.page.html
@@ -13,7 +13,7 @@
     </ion-avatar>
     <div class="info animate__animated animate__fadeInBottomLeft duration">
       <h1>{{userData?.fullName || '. . . . . .'}}</h1>
-      <p>15 إعلان . عضو منذ 15 أبريل 2018</p>
+      <p> عضو منذ {{userData?.createdAt| date}}</p>
     </div>
 
 
