--- a/src/app/pages/myadds/myadds.page.scss
+++ b/src/app/pages/myadds/myadds.page.scss
@@ -35,6 +35,10 @@ ion-content {
   font-family: 'bold';
 }
 
+ion-segment {
+  margin-bottom: 12px;
+}
+
 .sub_title {
   font-size: 14px;
   line-height: 17px;
