--- a/src/global.scss
+++ b/src/global.scss
@@ -94,7 +94,7 @@ ion-header {
 }
 
 .loading {
-  background: var(--light-background);
+  background: var(--ion-color-light);
   position: absolute;
   top: 0;
   right: 0;
