--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -20,6 +20,11 @@ ion-header {
       // margin-block-start: 16px;
     }
   }
+
+  ion-title {
+    font-family: 'bold';
+  }
+
 }
 
 ion-content {
@@ -42,7 +47,7 @@ h1 {
 
 .search {
   border-radius: 22px;
-  margin-block: 24px;
+  margin-block: 16px 24px;
   height: 44px;
   padding: 6px;
   background: #fff;
@@ -70,6 +75,15 @@ h1 {
   img:first-of-type {
     width: 24px;
     margin-inline: 6px;
+  }
+
+  ion-button {
+    margin: 0;
+    --padding-start: 0;
+    --padding-end: 0;
+    width: 70px;
+    height: 100%;
+    font-family: 'bold';
   }
 }
 
@@ -157,7 +171,7 @@ h1 {
 }
 
 .swiper.homeSlider {
-  height: 270px;
+  height: 280px;
   margin-inline-start: 10px;
 
   .swiper-slide {
@@ -208,7 +222,7 @@ h1 {
   justify-content: flex-start;
   overflow: hidden;
   text-align: start;
-  box-shadow: 0px 8px 16px #87899E26;
+  box-shadow: 0px 8px 12px #87899E26;
   height: fit-content;
   position: relative;
 
@@ -241,6 +255,7 @@ h1 {
   .body_content {
     padding: 12px;
     width: 100%;
+    background: #fff;
 
     .body_head {
       display: flex;
@@ -271,7 +286,7 @@ h1 {
   .footer_content {
     display: flex;
     justify-content: flex-start;
-    gap: 24px;
+    gap: 18px;
     align-items: center;
     border-top: 1px solid rgba(135, 137, 158, 25%);
 
@@ -334,5 +349,34 @@ ion-modal {
         border-radius: 25px;
       }
     }
+  }
+}
+
+img.sold {
+  position: absolute;
+  width: 100% !important;
+  /* display: block; */
+  background: rgba(1, 1, 1, .3);
+  height: 100% !important;
+  padding: 30px;
+}
+
+.stoped {
+  position: absolute;
+  width: 100% !important;
+  /* display: block; */
+  background: rgba(1, 1, 1, 0.3);
+  height: 100% !important;
+  padding: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  /* color: #fff; */
+  p {
+    font-size: 28px;
+    color: #fff;
+    font-family: 'bold';
+    transform: rotate(345deg);
   }
 }
