--- a/src/app/pages/category/category.page.html
+++ b/src/app/pages/category/category.page.html
@@ -4,8 +4,8 @@
       <img src="../../assets/images/back.svg">
     </ion-button>
     <ion-searchbar [(ngModel)]="searchQuery" class="animate__animated animate__fadeInLeft" style="padding-bottom: 0;"
-      [hidden]="searchbarShow" mode="ios" placeholder="بحث بالاسم" inputmode="decimal" type="text"
-      (ionChange)="onSearchChange($event)" (ionBlur)="searchbarShow=true" [debounce]="250"></ion-searchbar>
+      [hidden]="searchbarShow" mode="ios" placeholder="بحث بالاسم" type="text" (ionChange)="onSearchChange($event)"
+      (ionBlur)="searchbarShow=true" [debounce]="250"></ion-searchbar>
     <ion-button slot="end" fill="clear" (click)="searchbarShow = !searchbarShow">
       <img src="../../assets/images/search.png">
     </ion-button>
@@ -17,13 +17,28 @@
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
   <div class="container">
-    <h1 class="title_category animate__animated animate__fadeInUp duration">{{typeBuild?.name}}</h1>
+    <h1 class="title_category animate__animated animate__fadeInUp duration">
+      {{typeBuild?.name}}
+
+
+      <ion-chip (click)="presentPopover($event)" color="primary" mode="ios" outline="true">
+        <ion-label>ترتيب</ion-label>
+      </ion-chip>
+    </h1>
     <!-- <p class="sub_title animate__animated animate__fadeInUp duration">456 شقة مختلفة</p> -->
     <div *ngFor="let build of building;let i = index;trackBy:trackFu"
       class="add_box_item animate__animated animate__fadeInUp duration" (click)="details(build)">
       <div class="head_box">
-        <span>{{build?.adType?.name}}</span>
-        <img [src]="build?.images[0] ?? '../../../assets/images/buildplaceholder.png'" alt="">
+        <span *ngIf="build.adType._id !='63b978f98aca1c524a92466e'"
+          style="top: 30px; background: var(--ion-color-primary);">{{build?.adType?.name}}</span>
+        <span>{{build?.adGender?.name}}</span>
+        <div *ngIf="build.adStatus._id=='63b97b698aca1c524a924685'" class="stoped">
+          <p>تم البيع</p>
+        </div>
+        <div *ngIf="build.adStatus._id=='63b97b628aca1c524a924683'" class="stoped">
+          <p>موقف مؤقتاً</p>
+        </div>
+        <img [defaultImage]="'../../../assets/images/buildplaceholder.png'" [lazyLoad]="build?.images[0]" alt="">
       </div>
       <div class="body_content">
         <div class="body_head">
@@ -42,15 +57,30 @@
           </div>
         </div>
         <div class="footer_content">
-          <p>
+          <p *ngIf="build?.area">
             <img src="../../assets/images/size.svg" alt="">
             {{build?.area}}م
+          </p>
+          <p *ngIf="build?.interface">
+            الواجهه
+            <!-- <img src="../../assets/images/size.svg" alt=""> -->
+            {{build?.interface}}م
+          </p>
+          <p *ngIf="build?.depth">
+            النزال
+            <!-- <img src="../../assets/images/size.svg" alt=""> -->
+            {{build?.depth}}م
+          </p>
+          <p *ngIf="build?.floorsNumber">
+            الطوابق
+            <!-- <img src="../../assets/images/size.svg" alt=""> -->
+            {{build?.floorsNumber}}
           </p>
           <p *ngIf="build?.bedsNumber">
             <img src="../../assets/images/bed.svg" alt="">
             {{build?.bedsNumber}}
           </p>
-          <p>
+          <p *ngIf="build?.bathroomNumber">
             <img src="../../assets/images/bath_room.svg" alt="">
             {{build?.bathroomNumber}}
           </p>
@@ -118,7 +148,7 @@
               <ion-select-option value="hawaii">Hawaii</ion-select-option>
             </ion-select>
           </div> -->
-          <p>جنس السند</p>
+          <p>نوع ملكيه السند</p>
           <div class="item_box">
             <ion-select mode="ios" placeholder="الشقق" [(ngModel)]="bondType">
               <ion-select-option *ngFor="let type of bondTypes" [value]="type._id">{{type.name}}</ion-select-option>
@@ -173,4 +203,19 @@
       </ion-content>
     </ng-template>
   </ion-modal>
+
+  <ion-popover #popover [dismissOnSelect]="true" [isOpen]="isOpen" (didDismiss)="isOpen = false" mode="ios">
+    <ng-template>
+      <ion-content class="popOver">
+        <ion-list>
+          <ion-item button (click)="sort = true;getBuilds()">
+            <ion-label color="primary">حسب الاقرب</ion-label>
+          </ion-item>
+          <ion-item button (click)="sort = false;getBuilds()">
+            <ion-label color="success">حسب الاحدث</ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-content>
+    </ng-template>
+  </ion-popover>
 </ion-content>
