--- a/src/app/pages/category/category.page.scss
+++ b/src/app/pages/category/category.page.scss
@@ -32,7 +32,10 @@ ion-content {
   font-size: 24px;
   line-height: 29px;
   color: var(--dark-text);
-  font-family: 'bold';
+  font-family: "bold";
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .sub_title {
@@ -81,6 +84,7 @@ ion-content {
   .body_content {
     padding: 12px;
     width: 100%;
+    background: #fff;
 
     .body_head {
       display: flex;
@@ -119,7 +123,7 @@ ion-content {
   .footer_content {
     display: flex;
     justify-content: flex-start;
-    gap: 24px;
+    gap: 18px;
     align-items: center;
     border-top: 1px solid rgba(135, 137, 158, 25%);
 
@@ -174,5 +178,34 @@ ion-modal {
         border-radius: 25px;
       }
     }
+  }
+}
+
+img.sold {
+  position: absolute;
+  width: 100% !important;
+  /* display: block; */
+  background: rgba(1, 1, 1, .3);
+  height: 100% !important;
+  padding: 30px;
+}
+
+.stoped {
+  position: absolute;
+  width: 100% !important;
+  /* display: block; */
+  background: rgba(1, 1, 1, 0.3);
+  height: 100% !important;
+  padding: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  /* color: #fff; */
+  p {
+    font-size: 28px;
+    color: #fff;
+    font-family: 'bold';
+    transform: rotate(345deg);
   }
 }
