wishlist and fcm

--- a/src/app/pages/add/add.page.html
+++ b/src/app/pages/add/add.page.html
@@ -55,7 +55,7 @@
         </div>
 
         <div class="animate__animated animate__fadeInBottomLeft duration">
-          <p>اسم / عنوان الرئيسي</p>
+          <p>اسم / العنوان الرئيسي</p>
           <div class="item_box">
             <ion-input formControlName="title" placeholder="ادخل العنوان">
             </ion-input>
