--- a/src/app/pages/menu/menu.page.html
+++ b/src/app/pages/menu/menu.page.html
@@ -45,7 +45,7 @@
       </div>
     </div>
 
-    <div class="item_box animate__animated animate__fadeInBottomLeft duration">
+    <div class="item_box animate__animated animate__fadeInBottomLeft duration" (click)="navigate('wishlist')">
       <div class="image">
         <img src="../../../assets/images/like-list.svg" alt="">
       </div>
