--- a/src/app/pages/category/category.page.scss
+++ b/src/app/pages/category/category.page.scss
@@ -21,6 +21,42 @@ ion-content {
   --background: #F8F9FB;
 }
 
+ion-segment {
+  margin-bottom: 12px;
+
+  ion-segment-button {
+    margin-inline-end: 6px;
+    font-family: 'bold';
+    font-weight: 800;
+    background: #fff;
+    border-radius: 8px;
+  }
+
+  ion-segment-button.segment-button-checked {
+    border: 1px solid var(--ion-color-primary);
+    background: rgb(42 111 219 / 6%);
+  }
+
+  ion-segment-button.md::part(indicator-background) {
+    height: 0px;
+  }
+}
+
+ion-segment::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
+ion-segment::-moz-scrollbar {
+  width: 0;
+  height: 0;
+}
+
+ion-segment::-ms-scrollbar {
+  width: 0;
+  height: 0;
+}
+
 .container {
   padding: 0px 16px 32px;
   margin: auto;
