--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -30,7 +30,7 @@
 
     <!-- <div class="container"> -->
     <h1 class="title_category animate__animated animate__fadeInUp duration">الاعلانات</h1>
-    <ion-segment scrollable="true" mode="ios" color="primary" [(ngModel)]="adGender"
+    <ion-segment scrollable="true" mode="md" color="primary" [(ngModel)]="adGender"
       (ionChange)="segmentChanged($event)">
       <ion-segment-button value="">
         <ion-label>الكل</ion-label>
