--- a/src/app/pages/me/me.page.scss
+++ b/src/app/pages/me/me.page.scss
@@ -32,6 +32,7 @@ ion-content {
   // align-items: center;
   // margin-top: 16px;
   display: inline-block;
+  position: relative;
 
   .pic {
     background: #EBECED;
